fixed dark mode (by forcing it)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -128,10 +128,4 @@
   body {
     @apply bg-background text-foreground;
   }
-
-  @media (prefers-color-scheme: dark) {
-    body {
-      @apply dark
-    }
-  }
 }
